--- a/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
@@ -1,7 +1,21 @@
-﻿@model dynamic
+﻿@using UnobtrusiveMVCTechniques.Helpers
+@model UnobtrusiveMVCTechniques.Controllers.SomeViewModel
 
 @{
     ViewBag.Title = "Unobtrusive MVC Techniques";
 }
 
 <h1>Unobtrusive MVC Techniques</h1>
+
+@if (ViewBag.Success != null)
+{
+    <p>Action successfully performed!</p>
+}
+
+@using (Html.BeginForm())
+{
+    @Html.OutputField(m => m.Integer)
+    @Html.OutputField(m => m.Required)
+    @Html.OutputField(m => m.RegexOneWordChar)
+    <input type="submit" value="Submit" />
+}
