--- a/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
@@ -17,5 +17,7 @@
     @Html.OutputField(m => m.Integer)
     @Html.OutputField(m => m.Required)
     @Html.OutputField(m => m.RegexOneWordChar)
+    @Html.OutputField(m => m.Email)
+    @Html.OutputField(m => m.Url)
     <input type="submit" value="Submit" />
 }
