--- a/UnobtrusiveMVCTechniques/Views/Shared/_Layout.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 </head>
 
 <body>
