Set up static home page with links to experiments

--- a/UnobtrusiveMVCTechniques/Views/CustomValidation/ValidationTest.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/CustomValidation/ValidationTest.cshtml
@@ -2,7 +2,7 @@
 @model UnobtrusiveMVCTechniques.Controllers.TestViewModel
 
 @{
-    ViewBag.Title = "Custom Validation Test";
+    ViewBag.Title = "Custom Validation Test - Unobtrusive MVC Techniques";
 }
 
 <h1>Custom Validation Test</h1>
