--- a/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using UnobtrusiveMVCTechniques.Helpers
-@model UnobtrusiveMVCTechniques.Controllers.SomeViewModel
+﻿@model dynamic
 
 @{
     ViewBag.Title = "Unobtrusive MVC Techniques";
@@ -7,17 +6,8 @@
 
 <h1>Unobtrusive MVC Techniques</h1>
 
-@if (ViewBag.Success != null)
-{
-    <p>Action successfully performed!</p>
-}
+<p>@Html.ActionLink("Unobtrusive Validation Example", "ValidationExample")</p>
 
-@using (Html.BeginForm())
-{
-    @Html.OutputField(m => m.Integer)
-    @Html.OutputField(m => m.Required)
-    @Html.OutputField(m => m.RegexOneWordChar)
-    @Html.OutputField(m => m.Email)
-    @Html.OutputField(m => m.Url)
-    <input type="submit" value="Submit" />
-}
+<ol>
+    <li>@Html.ActionLink("Custom validation code in controller", "CustomCodeInController", "CustomValidation")</li>
+</ol>
