--- a/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
@@ -15,4 +15,5 @@
     <li>@Html.ActionLink("Custom validation code in controller", "CustomCodeInController", "CustomValidation")</li>
     <li>@Html.ActionLink("Modularised custom validation code called from controller", "ModularisedCustomCodeCalledFromController", "CustomValidation")</li>
     <li>@Html.ActionLink("Get default model binder to call the validation code before the controller action", "ValidationAlreadyCalled", "CustomValidation")</li>
+    <li>@Html.ActionLink("Introduce a validation library", "FluentValidation", "CustomValidation")</li>
 </ol>
