Added final custom validation example

--- a/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/Index.cshtml
@@ -17,4 +17,5 @@
     <li>@Html.ActionLink("Get default model binder to call the validation code before the controller action", "ValidationAlreadyCalled", "CustomValidation")</li>
     <li>@Html.ActionLink("Introduce a validation library", "FluentValidation", "CustomValidation")</li>
     <li>@Html.ActionLink("Use ModelValidatorProvider", "ModelValidatorProvider", "CustomValidation")</li>
+    <li>@Html.ActionLink("Use ModelValidatorProvider and Dependency Injection", "ModelValidatorProviderWithDi", "CustomValidation")</li>
 </ol>
