Added the unobtrusive custom validation to the final validation example

--- a/UnobtrusiveMVCTechniques/Views/Home/ValidationExample.cshtml
+++ b/UnobtrusiveMVCTechniques/Views/Home/ValidationExample.cshtml
@@ -19,5 +19,7 @@
     @Html.OutputField(m => m.RegexOneWordChar)
     @Html.OutputField(m => m.Email)
     @Html.OutputField(m => m.Url)
+    @Html.OutputField(m => m.UserName)
+    @Html.OutputField(m => m.UserNameFollowedByX)
     <input type="submit" value="Submit" />
 }
